<resources>
    <string name="app_name">Latest Movies</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="likes_tab">Likes</string>
    <string name="latest_tab">Latest Movies</string>
    <string name="app_title">The latest movie</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>

</resources>