<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Views.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tabLayout">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_title" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            style="@style/Widget.MaterialComponents.TabLayout.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintBottom_toTopOf="@id/viewPager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_tab" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes_tab" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
        </FrameLayout>
        <RelativeLayout
            android:id="@+id/noInternetLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:visibility="gone"
           >
            <ImageView
                android:id="@+id/noInternetImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_signal_wifi_statusbar_connected_no_internet_4_deep_purple_300_48dp" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noInternetText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_internet_connection"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/noInternetImage"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/tryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/try_again"
                android:layout_below="@id/noInternetText"
                android:backgroundTint="@color/purple_200"
                android:layout_marginTop="20dp"
                app:cornerRadius="16dp"
                />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>